# uwu_quotes

./: Cargo.toml  main.rs
configuration/: anime.toml  anime.yaml
src/: configuration.rs  lib.rs  main.rs  output.rs  request.rs
