[package]
name = "uwu_quote_bot"
version = "0.1.0"
authors = ["Marceline Belardo <marcy@marcelinesystems.dev>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uwuify = "0.2.2"
reqwest = "0.11.14"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
tokio = { version = "1.25.0", features = ["full"] }
rand = "0.8.5"